editing style and script

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
         <div class="field-container">
           <input class="field-input" id="guessField" name="inputName" type="text" placeholder=" ">
           <label class="field-placeholder" for="inputName">Enter a guess:</label>
+         
         </div>
-
+        
       </div>
+
+      <p class="note"></p>
 
       <div class="plaque">
         <div class="preview">
@@ -42,6 +45,7 @@
 
       </div>
 
+      <p class="invoice"></p>
 
     </div>
     <a href="https://instincthub.com/" target="_blank">
