--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <div class="">
             <div class="price-tag">Total: <span id="plaquePrice">$0</span></div>
             <input type="submit" value="Buy Now" class="buy-submit" id="buyMe">
+            <button class="cancel">try again</button>
           </div>
 
         </div>
